Fixed typing issue

--- a/iphone-ecommerce/tsconfig.json
+++ b/iphone-ecommerce/tsconfig.json
@@ -6,7 +6,7 @@
     "./node_modules/@sanity/base/types/**/*.ts",
     "./**/*.ts",
     "./**/*.tsx"
-  ],
+, "schemas/schema.js"  ],
   "compilerOptions": {
     "jsx": "react"
   }
