--- a/iphone-ecommerce/package.json
+++ b/iphone-ecommerce/package.json
@@ -27,10 +27,10 @@
     "react-barcode": "^1.3.2",
     "react-dom": "^17.0",
     "react-icons": "^4.4.0",
+    "sanity-codegen": "^0.9.8",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "sanity-codegen": "^0.9.8"
+    "prettier": "^2.7.1"
   }
 }
