--- a/iphone-ecommerce/tsconfig.json
+++ b/iphone-ecommerce/tsconfig.json
@@ -5,10 +5,8 @@
   "include": [
     "./node_modules/@sanity/base/types/**/*.ts",
     "./**/*.ts",
-    "./**/*.tsx",
-    "schemas/schema.js",
-    "sanity-codegen.config.ts"
-  ],
+    "./**/*.tsx"
+, "schemas/schema.js"  ],
   "compilerOptions": {
     "jsx": "react"
   }
